Adding API and tutorial

--- a/interface/templates/interface/predict.html
+++ b/interface/templates/interface/predict.html
@@ -59,7 +59,7 @@
         Dropzone.options.videoinput = {
             paramName: "file",
             maxFiles: 10,
-            maxFilesize: 10, // MB
+            parallelUploads: 10,
             acceptedFiles: "image/jpeg",
             uploadMultiple: true,
             init: function() {
