--- a/interface/templates/interface/api-end.html
+++ b/interface/templates/interface/api-end.html
@@ -55,7 +55,7 @@
     </div> 
     <div class="row m-2">
         <div class="col">
-            <div class="row"><p>Use your key and POST your image as form data with the help of Postman or any other similar helper to the link <pre class="m-2"><code>image-caption-generator.azurewebsites.net/api/</code></pre></p></div>
+            <div class="row"><p>Use your key and POST your image as form data with the help of Postman or any other similar helper to the link <pre class="m-2"><code>https://image-caption-generator.azurewebsites.net/api/</code></pre></p></div>
             <div class="row"><img src="/static/api.png" height="400"></div>
         </div>
     </div>
