Adding some bugfixes

--- a/interface/templates/interface/processing.html
+++ b/interface/templates/interface/processing.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 
 {%block title%}Home{% endblock %}
+
+{% block cdn %}
+  <meta http-equiv="refresh" content="10" />
+{% endblock %}
   
 {% block navbar %}
     <ul class="navbar-nav mr-auto">
