--- a/interface/templates/interface/result.html
+++ b/interface/templates/interface/result.html
@@ -48,7 +48,7 @@
         </tr>
         {% for res in result %}
           <tr>
-            <td rowspan="3"><img src="{{res.0}}"></td>
+            <td rowspan="3"><img src="{{res.0}}" height="400"></td>
             <td>1</td>
             <td>{{res.1.0.0}}</td>
             <td>{{res.1.0.1}}</td>
